test/corpus/11.txt
==================
Handle JSX String Interpolation After Expression
==================

*[_type == "movie"][0...10] {
  title,
  poster ${IMAGE}
}

---

(document
  (expression
    (expression
      (expression
        (expression
          (everything_expression))
        (filter
          (expression
            (expression
              (this_attribute
                (identifier)))
            (binary_operator)
            (expression
              (string)))))
      (slice
        (range
          (expression
            (number))
          (expression
            (number)))))
    (projection
      (object
        (object_attribute
          (expression
            (this_attribute
              (identifier))))
        (object_attribute
          (this_attribute
            (identifier))
          (js_insert
            (identifier)))))))
