test/corpus/2.txt
==================
Filter
==================

*[_type == "movie"]

---

(document
  (expression
    (expression
      (everything_expression))
    (filter
      (expression
        (expression
          (this_attribute
            (identifier)))
        (binary_operator)
        (expression
          (string))))))
