test/corpus/6.txt
==================
Projections & Pipes
==================

*[title in ['a', "b", 'c']] | order(_createdAt desc) [0...10] {
  "names": ["espen", 'bjørge', ...["simen", "even"]],
  ...,
}

---

(source_file
  (expression
    (expression
      (expression
        (pipe_function_call
          (expression
            (expression
              (everything_expression))
            (filter
              (expression
                (expression
                  (this_attribute
                    (identifier)))
                (binary_operator)
                (expression
                  (array
                    (array_element
                      (expression
                        (string)))
                    (array_element
                      (expression
                        (string)))
                    (array_element
                      (expression
                        (string))))))))
          (function_call
            (identifier)
            (expression
              (desc
                (expression
                  (this_attribute
                    (identifier))))))))
      (slice
        (range
          (expression
            (number))
          (expression
            (number)))))
    (projection
      (object
        (object_attribute
          (string)
          (expression
            (array
              (array_element
                (expression
                  (string)))
              (array_element
                (expression
                  (string)))
              (array_element
                (expression
                  (array
                    (array_element
                      (expression
                        (string)))
                    (array_element
                      (expression
                        (string)))))))))
        (object_attribute)))))
