test/corpus/8.txt
==================
All Kinds of Destructuring Functions
==================


*[_type == $type && title in ['a', "b", 'c']] | order(_createdAt desc) [0...10] {
  ...,

  author->,
  "tags": tags[]->,

  "even": index % 2 == 0,
  'odd': index % 2 != 0,

  // Only fetch news for recent movies
  ...select(releaseDate >= $recentThreshold => {
    "news":     *[_type == 'news' && movie._ref == ^._id],
  }),

  ...select(popularity > 20 && field == !false && rating >= 7.0 => {
    "awards":   *[_type == 'award' && movie._ref == @._id],
    "related":  *[_type == 'movie' && references(^._id)].title,
    "cast":     castMembers[characterName in ['Ripley', 'Lambert']].person->{_id, name},
    "featured": true,
    "count":    count(*[_type == 'movie' && rating == 'R'])
  })
}

---

(source_file
  (expression
    (expression
      (expression
        (pipe_function_call
          (expression
            (expression
              (everything_expression))
            (filter
              (expression
                (expression
                  (expression
                    (expression
                      (this_attribute
                        (identifier)))
                    (binary_operator)
                    (expression
                      (variable
                        (identifier))))
                  (binary_operator)
                  (expression
                    (this_attribute
                      (identifier))))
                (binary_operator)
                (expression
                  (array
                    (array_element
                      (expression
                        (string)))
                    (array_element
                      (expression
                        (string)))
                    (array_element
                      (expression
                        (string))))))))
          (function_call
            (identifier)
            (expression
              (desc
                (expression
                  (this_attribute
                    (identifier))))))))
      (slice
        (range
          (expression
            (number))
          (expression
            (number)))))
    (projection
      (object
        (object_attribute)
        (object_attribute
          (expression
            (expression
              (this_attribute
                (identifier)))
            (dereference)))
        (object_attribute
          (string)
          (expression
            (expression
              (expression
                (this_attribute
                  (identifier)))
              (array_postfix))
            (dereference)))
        (object_attribute
          (string)
          (expression
            (expression
              (expression
                (this_attribute
                  (identifier)))
              (binary_operator)
              (expression
                (number)))
            (binary_operator)
            (expression
              (number))))
        (object_attribute
          (string)
          (expression
            (expression
              (expression
                (this_attribute
                  (identifier)))
              (binary_operator)
              (expression
                (number)))
            (binary_operator)
            (expression
              (number))))
        (comment)
        (object_attribute
          (expression
            (function_call
              (identifier)
              (expression
                (expression
                  (this_attribute
                    (identifier)))
                (binary_operator)
                (expression
                  (pair
                    (expression
                      (variable
                        (identifier)))
                    (expression
                      (object
                        (object_attribute
                          (string)
                          (expression
                            (expression
                              (everything_expression))
                            (filter
                              (expression
                                (expression
                                  (expression
                                    (expression
                                      (expression
                                        (expression
                                          (this_attribute
                                            (identifier)))
                                        (binary_operator)
                                        (expression
                                          (string)))
                                      (binary_operator)
                                      (expression
                                        (this_attribute
                                          (identifier))))
                                    (attribute_access
                                      (identifier)))
                                  (binary_operator)
                                  (expression
                                    (parent_expression)))
                                (attribute_access
                                  (identifier))))))))))))))
        (object_attribute
          (expression
            (function_call
              (identifier)
              (expression
                (expression
                  (expression
                    (expression
                      (expression
                        (expression
                          (this_attribute
                            (identifier)))
                        (binary_operator)
                        (expression
                          (number)))
                      (binary_operator)
                      (expression
                        (this_attribute
                          (identifier))))
                    (binary_operator)
                    (expression
                      (unary_operator)
                      (expression
                        (false))))
                  (binary_operator)
                  (expression
                    (this_attribute
                      (identifier))))
                (binary_operator)
                (expression
                  (pair
                    (expression
                      (number))
                    (expression
                      (object
                        (object_attribute
                          (string)
                          (expression
                            (expression
                              (everything_expression))
                            (filter
                              (expression
                                (expression
                                  (expression
                                    (expression
                                      (expression
                                        (expression
                                          (this_attribute
                                            (identifier)))
                                        (binary_operator)
                                        (expression
                                          (string)))
                                      (binary_operator)
                                      (expression
                                        (this_attribute
                                          (identifier))))
                                    (attribute_access
                                      (identifier)))
                                  (binary_operator)
                                  (expression
                                    (this_expression)))
                                (attribute_access
                                  (identifier))))))
                        (object_attribute
                          (string)
                          (expression
                            (expression
                              (expression
                                (everything_expression))
                              (filter
                                (expression
                                  (expression
                                    (expression
                                      (this_attribute
                                        (identifier)))
                                    (binary_operator)
                                    (expression
                                      (string)))
                                  (binary_operator)
                                  (expression
                                    (function_call
                                      (identifier)
                                      (expression
                                        (expression
                                          (parent_expression))
                                        (attribute_access
                                          (identifier))))))))
                            (attribute_access
                              (identifier))))
                        (object_attribute
                          (string)
                          (expression
                            (expression
                              (expression
                                (expression
                                  (expression
                                    (this_attribute
                                      (identifier)))
                                  (filter
                                    (expression
                                      (expression
                                        (this_attribute
                                          (identifier)))
                                      (binary_operator)
                                      (expression
                                        (array
                                          (array_element
                                            (expression
                                              (string)))
                                          (array_element
                                            (expression
                                              (string))))))))
                                (attribute_access
                                  (identifier)))
                              (dereference))
                            (projection
                              (object
                                (object_attribute
                                  (expression
                                    (this_attribute
                                      (identifier))))
                                (object_attribute
                                  (expression
                                    (this_attribute
                                      (identifier))))))))
                        (object_attribute
                          (string)
                          (expression
                            (true)))
                        (object_attribute
                          (string)
                          (expression
                            (function_call
                              (identifier)
                              (expression
                                (expression
                                  (everything_expression))
                                (filter
                                  (expression
                                    (expression
                                      (expression
                                        (expression
                                          (this_attribute
                                            (identifier)))
                                        (binary_operator)
                                        (expression
                                          (string)))
                                      (binary_operator)
                                      (expression
                                        (this_attribute
                                          (identifier))))
                                    (binary_operator)
                                    (expression
                                      (string))))))))))))))))))))
